# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md  run-clang-format.sh
.github/workflows/: ci.yml
cmake/modules/: CodeCoverage.cmake
include/: fibonacci.hpp
src/: CMakeLists.txt  fibonacci.cpp  hello.cpp
tests/: CMakeLists.txt  test_fibonacci.cpp
